inc/MetalOS.h

struct Point2D
{
	size_t X;
	size_t Y;
};
struct Rectangle
{
	size_t X;
	size_t Y;
	size_t Width;
	size_t Height;

	bool Contains(const Point2D& p) const
	{
		if (p.X < X || p.X > (X + Width))
			return false;

		if (p.Y < Y || p.Y >(Y + Height))
			return false;

		return true;
	}
};
struct ReadOnlyBuffer
{
	const void* Data;
	size_t Length;
};
struct Buffer
{
	void* Data;
	size_t Length;

	ReadOnlyBuffer GetRef()
	{
		return { Data, Length };
	}
};
struct ProcessInfo
{
	uint32_t Id;
};
enum class DayOfWeek
{
	Sunday,
	Monday,
	Tuesday,
	Wednesday,
	Thursday,
	Friday,
	Saturday
};
struct SystemTime
{
	uint16_t Year;
	uint16_t Month;
	DayOfWeek DayOfTheWeek;
	uint16_t Day;
	uint16_t Hour;
	uint16_t Minute;
	uint16_t Second;
	uint16_t Milliseconds;
};
struct SystemInfo
{
	uint32_t PageSize;
	SystemArchitecture Architecture;
	uint32_t NumberOfProcessors;
	uint32_t AllocationGranularity;
	uintptr_t MinimumApplicationAddress;
	uintptr_t MaximumApplicationAddress;
};
enum class GenericAccess
{
	Read = (1 << 0),
	Write = (1 << 1),
};
typedef void* Handle;
typedef void* HThread;
typedef void* HSharedMemory;
typedef void* HRingBuffer;
typedef size_t (*ThreadStart)(void* parameter);
enum class MessageType
{
	KeyEvent,
	MouseEvent,
	PaintEvent,
};
struct MessageHeader
{
	MessageType MessageType;
};
struct KeyEvent
{
	VirtualKey Key;
	struct
	{
		uint16_t Pressed : 1;
	} Flags;
};
struct MouseEvent
{
	MouseButtonState Buttons;
	uint16_t XPosition;
	uint16_t YPosition;
};
struct PaintEvent
{
	Rectangle Region;
};
struct Message
{
	MessageHeader Header;
	union
	{
		KeyEvent KeyEvent;
		MouseEvent MouseEvent;
		PaintEvent PaintEvent;
	};
};
enum class WaitStatus
{
	None,
	Signaled,
	Timeout,
	Abandoned,
	//Failed conflicts with macro
};
enum class MemoryAllocationType
{
	Commit = 1,
	Reserve = 2,
	CommitReserve = Commit | Reserve,
};
enum class MemoryProtection
{
	PageRead = 1,
	PageWrite = 2,
	PageExecute = 4,
	PageReadWrite = PageRead | PageWrite,
	PageReadExecute = PageRead | PageExecute,
	PageReadWriteExecute = PageRead | PageWrite | PageExecute
};
enum class FilePointerMove
{
	Begin,
	Current,
	End
};
enum class SystemCallResult
{
	Success = 0,
	InvalidPointer,
	Failed
};
//Info
SYSTEMCALL(SystemCallResult) GetSystemInfo(SystemInfo& info);
SYSTEMCALL(size_t) GetTickCount();
SYSTEMCALL(SystemCallResult) GetSystemTime(SystemTime& time);
RUNTIMECALL(SystemCallResult) GetProcessInfo(ProcessInfo& info);
//Process/Thread
SYSTEMCALL(SystemCallResult) CreateProcess(const char* processName);
SYSTEMCALL(uint32_t) GetThreadId(Handle thread);
SYSTEMCALL(HThread) GetCurrentThread();
RUNTIMECALL(uint64_t) GetCurrentThreadId();
SYSTEMCALL(HThread) CreateThread(size_t stackSize, ThreadStart startAddress, void* arg);
SYSTEMCALL(void) Sleep(const uint32_t milliseconds);
SYSTEMCALL(void) SwitchToThread();
SYSTEMCALL(SystemCallResult) ExitProcess(const uint32_t exitCode);
SYSTEMCALL(SystemCallResult) ExitThread(const uint32_t exitCode);
RUNTIMECALL(uint32_t) GetLastError();
RUNTIMECALL(void) SetLastError(uint32_t errorCode);
//Semaphores
//Handle CreateSemaphore(size_t initial, size_t maximum, const char* name);
//SYSTEMCALL ReleaseSemaphore(Handle hSemaphore, size_t releaseCount, size_t* previousCount);

typedef void* HWindow;
//Windows
SYSTEMCALL(SystemCallResult) AllocWindow(HWindow& handle, const Rectangle& frame);
//SYSTEMCALL(SystemCallResult) GetWindowInfo(HWindow handle, Rectangle& frame, WindowStyle& style);
SYSTEMCALL(SystemCallResult) PaintWindow(HWindow handle, const ReadOnlyBuffer& buffer);
SYSTEMCALL(SystemCallResult) MoveWindow(HWindow handle, const Rectangle& frame);
SYSTEMCALL(SystemCallResult) GetWindowRect(HWindow handle, Rectangle& frame);
SYSTEMCALL(SystemCallResult) GetMessage(Message& message);
SYSTEMCALL(SystemCallResult) PeekMessage(Message& message);
SYSTEMCALL(SystemCallResult) GetScreenRect(Rectangle& rect);
SYSTEMCALL(Handle) CreateFile(const char* path, const GenericAccess access);
SYSTEMCALL(SystemCallResult) ReadFile(const Handle handle, void* buffer, const size_t bufferSize, size_t* bytesRead);
SYSTEMCALL(SystemCallResult) WriteFile(const Handle handle, const void* buffer, const size_t bufferSize, size_t* bytesWritten);
SYSTEMCALL(SystemCallResult) SetFilePointer(const Handle handle, const __int64 position, const FilePointerMove moveType, size_t* newPosition);
SYSTEMCALL(SystemCallResult) CloseFile(const Handle handle);
SYSTEMCALL(SystemCallResult) MoveFile(const char* existingFileName, const char* newFileName);
SYSTEMCALL(SystemCallResult) DeleteFile(const char* fileName);
SYSTEMCALL(SystemCallResult) CreateDirectory(const char* path);
SYSTEMCALL(void*) VirtualAlloc(const void* address, const size_t size, const MemoryAllocationType allocationType, const MemoryProtection protect);
SYSTEMCALL(HRingBuffer) CreateRingBuffer(const char* name, const size_t indexSize, const size_t ringSize);
SYSTEMCALL(HSharedMemory) CreateSharedMemory(const char* name, const size_t size);
SYSTEMCALL(void*) MapObject(const void* address, Handle handle);
SYSTEMCALL(void*) MapSharedObject(const void* address, const char* name);
SYSTEMCALL(SystemCallResult) DebugPrint(const char* s);
RUNTIMECALL(Handle) LoadLibrary(const char* lpLibFileName);
RUNTIMECALL(uintptr_t) GetProcAddress(Handle hModule, const char* lpProcName);
enum class DllEntryReason
{
	ProcessAttach,
	ProcessDetach,
	ThreadAttach,
	ThreadDetach
};
//True - LoadLibrary returns handle
//False - DLL is unloaded
typedef uint32_t (*DllMainCall)(Handle hinstDLL, enum DllEntryReason fdwReason);
struct RingBufferHeader
{
	size_t Capacity;
	size_t ReadIndex;
	size_t WriteIndex;
	Handle ReadWriteLock;
};
struct Channel
{
	struct
	{
		RingBufferHeader* Header;
		char* Buffer;
	} Inbound;
	struct
	{
		RingBufferHeader* Header;
		char* Buffer;
	} Outbound;
};