src/MetalOS.Internal.h

//Keep in sync with MetalOS.KernalApi syscalls.asm
enum class SystemCall : size_t
{
	GetSystemInfo = 0x100,
	GetTickCount,
	GetSystemTime,

	GetCurrentThread = 0x200,
	CreateProcess,
	CreateThread,
	GetThreadId,
	Sleep,
	SwitchToThread,
	SuspendThread,
	ResumeThread,
	ExitProcess,
	ExitThread,

	AllocWindow = 0x300,
	PaintWindow,
	MoveWindow,
	GetWindowRect,
	GetMessage,
	PeekMessage,
	GetScreenRect,

	CreateFile = 0x400,
	CreatePipe,
	ReadFile,
	WriteFile,
	SetFilePointer,
	CloseFile,
	MoveFile,
	DeleteFile,
	CreateDirectory,
	WaitForSingleObject,
	GetPipeInfo,
	CloseHandle,
	CreateEvent,
	ResetEvent,
	SetEvent,

	VirtualAlloc = 0x500,
	CreateRingBuffer,
	CreateSharedMemory,
	MapObject,
	MapSharedObject,

	DebugPrint = 0x600,
	DebugPrintBytes = 0x601,
};