crates/metalos/src/metalos_bindings.rs

#[test]
fn bindgen_test_layout_CreateProcessArgs() {
    assert_eq!(
        ::core::mem::size_of::<CreateProcessArgs>(),
        24usize,
        concat!("Size of: ", stringify!(CreateProcessArgs))
    );
    assert_eq!(
        ::core::mem::align_of::<CreateProcessArgs>(),
        8usize,
        concat!("Alignment of ", stringify!(CreateProcessArgs))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CreateProcessArgs>())).StdInput as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CreateProcessArgs),
            "::",
            stringify!(StdInput)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CreateProcessArgs>())).StdOutput as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CreateProcessArgs),
            "::",
            stringify!(StdOutput)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CreateProcessArgs>())).StdError as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CreateProcessArgs),
            "::",
            stringify!(StdError)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CreateProcessResult {
    pub Process: HProcess,
}
#[test]
fn bindgen_test_layout_CreateProcessResult() {
    assert_eq!(
        ::core::mem::size_of::<CreateProcessResult>(),
        8usize,
        concat!("Size of: ", stringify!(CreateProcessResult))
    );
    assert_eq!(
        ::core::mem::align_of::<CreateProcessResult>(),
        8usize,
        concat!("Alignment of ", stringify!(CreateProcessResult))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CreateProcessResult>())).Process as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CreateProcessResult),
            "::",
            stringify!(Process)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PipeInfo {
    pub BytesAvailable: size_t,
    pub IsBroken: bool,
}
#[test]
fn bindgen_test_layout_PipeInfo() {
    assert_eq!(
        ::core::mem::size_of::<PipeInfo>(),
        16usize,
        concat!("Size of: ", stringify!(PipeInfo))
    );
    assert_eq!(
        ::core::mem::align_of::<PipeInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(PipeInfo))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<PipeInfo>())).BytesAvailable as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PipeInfo),
            "::",
            stringify!(BytesAvailable)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<PipeInfo>())).IsBroken as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(PipeInfo),
            "::",
            stringify!(IsBroken)
        )
    );
}
extern "C" {
    pub fn GetSystemInfo(info: *mut SystemInfo) -> SystemCallResult;
}
extern "C" {
    pub fn GetTickCount() -> size_t;
}
extern "C" {
    pub fn GetSystemTime(time: *mut SystemTime) -> SystemCallResult;
}
extern "C" {
    pub fn GetProcessInfo(info: *mut ProcessInfo) -> SystemCallResult;
}
extern "C" {
    pub fn CreateProcess(
        processName: *const c_types::c_char,
        args: *const CreateProcessArgs,
        result: *mut CreateProcessResult,
    ) -> SystemCallResult;
}
extern "C" {
    pub fn GetThreadId(thread: HThread) -> u32;
}
extern "C" {
    pub fn GetCurrentThread() -> HThread;
}
extern "C" {
    pub fn GetCurrentThreadId() -> u64;
}
extern "C" {
    pub fn CreateThread(
        stackSize: size_t,
        startAddress: ThreadStart,
        arg: *mut c_types::c_void,
    ) -> HThread;
}
extern "C" {
    pub fn Sleep(milliseconds: u32);
}
extern "C" {
    pub fn SwitchToThread();
}
extern "C" {
    pub fn ExitProcess(exitCode: u32) -> SystemCallResult;
}
extern "C" {
    pub fn ExitThread(exitCode: u32) -> SystemCallResult;
}
extern "C" {
    pub fn GetLastError() -> u32;
}
extern "C" {
    pub fn SetLastError(errorCode: u32);
}
extern "C" {
    pub fn AllocWindow(handle: *mut HWindow, frame: *const Rectangle) -> SystemCallResult;
}
extern "C" {
    pub fn PaintWindow(handle: HWindow, buffer: *const ReadOnlyBuffer) -> SystemCallResult;
}
extern "C" {
    pub fn MoveWindow(handle: HWindow, frame: *const Rectangle) -> SystemCallResult;
}
extern "C" {
    pub fn GetWindowRect(handle: HWindow, frame: *mut Rectangle) -> SystemCallResult;
}
extern "C" {
    pub fn GetMessage(message: *mut Message) -> SystemCallResult;
}
extern "C" {
    pub fn PeekMessage(message: *mut Message) -> SystemCallResult;
}
extern "C" {
    pub fn GetScreenRect(rect: *mut Rectangle) -> SystemCallResult;
}
extern "C" {
    pub fn CreateFile(path: *const c_types::c_char, access: GenericAccess) -> HFile;
}
extern "C" {
    pub fn CreatePipe(readHandle: *mut HFile, writeHandle: *mut HFile) -> SystemCallResult;
}
extern "C" {
    pub fn ReadFile(
        handle: HFile,
        buffer: *mut c_types::c_void,
        bufferSize: size_t,
        bytesRead: *mut size_t,
    ) -> SystemCallResult;
}
extern "C" {
    pub fn WriteFile(
        handle: HFile,
        buffer: *const c_types::c_void,
        bufferSize: size_t,
        bytesWritten: *mut size_t,
    ) -> SystemCallResult;
}
extern "C" {
    pub fn SetFilePointer(
        handle: HFile,
        position: size_t,
        moveType: FilePointerMove,
        newPosition: *mut size_t,
    ) -> SystemCallResult;
}
extern "C" {
    pub fn CloseFile(handle: HFile) -> SystemCallResult;
}
extern "C" {
    pub fn MoveFile(
        existingFileName: *const c_types::c_char,
        newFileName: *const c_types::c_char,
    ) -> SystemCallResult;
}
extern "C" {
    pub fn DeleteFile(fileName: *const c_types::c_char) -> SystemCallResult;
}
extern "C" {
    pub fn CreateDirectory(path: *const c_types::c_char) -> SystemCallResult;
}
extern "C" {
    pub fn WaitForSingleObject(
        handle: Handle,
        milliseconds: u32,
        status: *mut WaitStatus,
    ) -> SystemCallResult;
}
extern "C" {
    pub fn GetPipeInfo(handle: HFile, info: *mut PipeInfo) -> SystemCallResult;
}
extern "C" {
    pub fn CloseHandle(handle: Handle) -> SystemCallResult;
}
extern "C" {
    pub fn CreateEvent(event: *mut HEvent, manual: bool, initial: bool) -> SystemCallResult;
}
extern "C" {
    pub fn SetEvent(event: HEvent) -> SystemCallResult;
}
extern "C" {
    pub fn ResetEvent(event: HEvent) -> SystemCallResult;
}
extern "C" {
    pub fn VirtualAlloc(
        address: *const c_types::c_void,
        size: size_t,
        allocationType: MemoryAllocationType,
        protect: MemoryProtection,
    ) -> *mut c_types::c_void;
}
extern "C" {
    pub fn CreateRingBuffer(
        name: *const c_types::c_char,
        indexSize: size_t,
        ringSize: size_t,
    ) -> HRingBuffer;
}
extern "C" {
    pub fn CreateSharedMemory(name: *const c_types::c_char, size: size_t) -> HSharedMemory;
}
extern "C" {
    pub fn MapObject(address: *const c_types::c_void, handle: Handle) -> *mut c_types::c_void;
}
extern "C" {
    pub fn MapSharedObject(
        address: *const c_types::c_void,
        name: *const c_types::c_char,
    ) -> *mut c_types::c_void;
}
extern "C" {
    pub fn DebugPrint(s: *const c_types::c_char) -> SystemCallResult;
}
extern "C" {
    pub fn DebugPrintBytes(s: *const c_types::c_char, length: size_t) -> SystemCallResult;
}
extern "C" {
    pub fn LoadLibrary(lpLibFileName: *const c_types::c_char) -> Handle;
}
extern "C" {
    pub fn GetProcAddress(hModule: Handle, lpProcName: *const c_types::c_char) -> usize;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Thread {
    pub m_thread: HThread,
}
#[test]
fn bindgen_test_layout_Thread() {
    assert_eq!(
        ::core::mem::size_of::<Thread>(),
        8usize,
        concat!("Size of: ", stringify!(Thread))
    );
    assert_eq!(
        ::core::mem::align_of::<Thread>(),
        8usize,
        concat!("Alignment of ", stringify!(Thread))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Thread>())).m_thread as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Thread),
            "::",
            stringify!(m_thread)
        )
    );
}
pub const DllEntryReason_ProcessAttach: DllEntryReason = 0;
pub const DllEntryReason_ProcessDetach: DllEntryReason = 1;
pub const DllEntryReason_ThreadAttach: DllEntryReason = 2;
pub const DllEntryReason_ThreadDetach: DllEntryReason = 3;
pub type DllEntryReason = c_types::c_int;
pub type DllMainCall = ::core::option::Option<
    unsafe extern "C" fn(hinstDLL: Handle, fdwReason: DllEntryReason) -> u32,
>;
pub const DllMainName: &[u8; 8usize] = b"DllMain\0";
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RingBufferHeader {
    pub Capacity: size_t,
    pub ReadIndex: size_t,
    pub WriteIndex: size_t,
    pub ReadWriteLock: Handle,
}
#[test]
fn bindgen_test_layout_RingBufferHeader() {
    assert_eq!(
        ::core::mem::size_of::<RingBufferHeader>(),
        32usize,
        concat!("Size of: ", stringify!(RingBufferHeader))
    );
    assert_eq!(
        ::core::mem::align_of::<RingBufferHeader>(),
        8usize,
        concat!("Alignment of ", stringify!(RingBufferHeader))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<RingBufferHeader>())).Capacity as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RingBufferHeader),
            "::",
            stringify!(Capacity)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<RingBufferHeader>())).ReadIndex as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RingBufferHeader),
            "::",
            stringify!(ReadIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<RingBufferHeader>())).WriteIndex as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(RingBufferHeader),
            "::",
            stringify!(WriteIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<RingBufferHeader>())).ReadWriteLock as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(RingBufferHeader),
            "::",
            stringify!(ReadWriteLock)
        )
    );
}
pub const UIChannelSize: size_t = 8192;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Channel {
    pub Inbound: Channel__bindgen_ty_1,
    pub Outbound: Channel__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Channel__bindgen_ty_1 {
    pub Header: *mut RingBufferHeader,
    pub Buffer: *mut c_types::c_char,
}
#[test]
fn bindgen_test_layout_Channel__bindgen_ty_1() {
    assert_eq!(
        ::core::mem::size_of::<Channel__bindgen_ty_1>(),
        16usize,
        concat!("Size of: ", stringify!(Channel__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<Channel__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(Channel__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Channel__bindgen_ty_1>())).Header as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Channel__bindgen_ty_1),
            "::",
            stringify!(Header)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Channel__bindgen_ty_1>())).Buffer as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Channel__bindgen_ty_1),
            "::",
            stringify!(Buffer)
        )
    );
}
